civilian is the new assistnat

--- a/html/archivedchangelog.html
+++ b/html/archivedchangelog.html
@@ -340,7 +340,7 @@ Stick old posts here to prevent cluttering of main changelog.
 	<h2 class="date">2013.09.12</h2>
 	<h3 class="author">Pomf123 updated:</h3>
 	<ul class="changes bgimages16">
-		<li class="rscadd">Another uplink item for assistants.</li>
+		<li class="rscadd">Another uplink item for civilians.</li>
 		<li class="bugfix">changeling stasis should fix pain, shrapnel and germ level.</li>
 		<li class="tweak">Removed sharp melee items getting stuck in a person's body for now</li>
 	</ul>
