--- a/html/changelog.html
+++ b/html/changelog.html
@@ -233,7 +233,7 @@ ADDING CREDITS?  EDIT templates/header.html (or footer.html if they're for old t
 			</ul>
 			<h3 class="author">Kavlax updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Trader suit and helmet protections are now equal to assistant suits'.</li>
+				<li class="rscadd">Trader suit and helmet protections are now equal to civilian suits'.</li>
 				<li class="rscadd">Disallow nonhumans from taking HOP HOS Captain.</li>
 			</ul>
 			<h3 class="author">Sprok updated:</h3>
